--- a/src/components/App.css
+++ b/src/components/App.css
@@ -224,7 +224,7 @@ a:hover {
 }
 
 .creature-toolbar--submit {
-  padding: 2px 5px;
+  padding: 3px 5px 1px 5px;
   background: transparent;
   border: none;
   box-shadow: none;
