--- a/src/components/App.css
+++ b/src/components/App.css
@@ -57,6 +57,7 @@ a:hover {
   border-radius: 15px;
   box-shadow: 0 0 5px #979AA4;
   width: 100%;
+  min-width: 0;
 }
 
 .form--label {
@@ -288,15 +289,32 @@ a:hover {
 .create-creature-form {
   width: 80%;
   margin-top: 20px;
-  grid-gap: 50px;
-  display: grid;
-  grid-template-columns: 20% 10% 10% 10% 5%;
   justify-content: center;
+  grid-gap: 22px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 15px);
 }
 
 .create-creature-form--item {
   display: flex;
   flex-direction: column;
+}
+
+.create-creature-form--item__text {
+  grid-column: span 8;
+}
+
+.create-creature-form--item__number {
+  grid-column: span 4;
+}
+
+.create-creature-form--item__multiplier {
+  grid-column: span 4;
+}
+
+.create-creature-form--item__submit {
+  grid-column: span 2;
+  justify-content: flex-end;
 }
 
 .create-creature-form--input__small-number {
@@ -315,25 +333,20 @@ a:hover {
   font-weight: bold;
 }
 
-.create-creature-form--item__multiplier .create-creature-form--label {
-  margin-left: 0px;
-}
-
 .create-creature-form--input__error {
   border: 2px solid red;
 }
 
-@media only screen and (max-width: 1175px) {
-  .create-creature-form {
-    grid-template-columns: 30% 15% 15% 15% 5%;
-  }
-}
-
 .create-creature-form--submit {
   height: 40px;
-  width: 40px;
-  margin-top: 22px;
   padding: 4px;
+  grid-column: span 2;
+}
+
+@media only screen and (max-width: 1175px) {
+  .create-creature-form {
+    width: 100%;
+  }
 }
 
 /*
@@ -342,7 +355,8 @@ a:hover {
 @media only screen and (max-width: 825px) {
   .create-creature-form {
     grid-template-columns: repeat(6, 25px);
-    grid-row-gap: 10px;
+    grid-row-gap: 15px;
+    grid-column-gap: 60px;
   }
 
   .create-creature-form--item {
@@ -367,7 +381,7 @@ a:hover {
 
   .create-creature-form--submit {
     grid-column: 4 / span 2;
-    width: 100%;
+    width: 60px;
   }
 }
 
