--- a/src/components/App.css
+++ b/src/components/App.css
@@ -202,6 +202,84 @@ input[type="number"] {
   height: 100%;
 }
 
+/* Input */
+
+.input--form {
+  width: 100%;
+  height: 100%;
+  grid-column: span 8;
+  display: flex;
+  flex-direction: column;
+}
+
+.input--number {
+  grid-column: span 4;
+}
+
+.input-wrapper {
+  display: flex;
+  border: 2px solid #822000;
+  border-radius: 15px;
+  background: #EBE1AD;
+  box-shadow: 0 0 5px #979aa4;
+  height: 40px;
+}
+
+.input-wrapper #input {
+  width: 100%;
+  background: white;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-right: 2px solid #822000;
+  overflow: hidden;
+}
+
+.input-wrapper__no-button #input {
+  border-right: none;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.input-wrapper__disabled {
+  background-color: transparent;
+  border: 2px dashed #822000;
+}
+
+.input-wrapper__disabled #input {
+  background-color: transparent;
+  border-right: none;
+}
+
+.input {
+  width: 95%;
+  height: 35px;
+  background: transparent;
+  border: none;
+  margin-left: 5px;
+  padding: 2px;
+  padding-right: 0;
+}
+
+input[type=number].input {
+  width: 85%;
+}
+
+.input--submit {
+  padding: 5px 3px 0 0;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  width: 55px;
+}
+
+.input--submit__disabled {
+  cursor: default;
+}
+
+.input__error {
+  border: 2px solid red;
+}
+
 /* Creature toolbar */
 
 .creature-toolbar {
@@ -213,82 +291,10 @@ input[type="number"] {
   width: 100%;
 }
 
-.creature-toolbar--form {
-  width: 100%;
-  height: 100%;
-  grid-column: span 8;
-  display: flex;
-  flex-direction: column;
-}
-
-.creature-toolbar--form__number {
-  grid-column: span 4;
-}
-
-.creature-toolbar--input-wrapper {
-  display: flex;
-  border: 2px solid #822000;
-  border-radius: 15px;
-  background: #EBE1AD;
-  box-shadow: 0 0 5px #979aa4;
-  height: 40px;
-}
-
-.creature-toolbar--input-wrapper #input {
-  width: 100%;
-  background: white;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-  border-right: 2px solid #822000;
-  overflow: hidden;
-}
-
-.creature-toolbar--input-wrapper__no-button #input {
-  border-right: none;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
-.creature-toolbar--input-wrapper__disabled {
-  background-color: transparent;
-  border: 2px dashed #822000;
-}
-
-.creature-toolbar--input-wrapper__disabled #input {
-  background-color: transparent;
-  border-right: none;
-}
-
-.creature-toolbar--input {
-  width: 95%;
-  height: 35px;
-  background: transparent;
-  border: none;
-  margin-left: 5px;
-  padding: 2px;
-  padding-right: 0;
-}
-
-input[type=number].creature-toolbar--input {
-  width: 85%;
-}
-
 .creature-toolbar--select {
   background-color: white;
   box-sizing: border-box;
   display: block;
-}
-
-.creature-toolbar--submit {
-  padding: 5px 3px 0 0;
-  background: transparent;
-  border: none;
-  box-shadow: none;
-  width: 55px;
-}
-
-.creature-toolbar--submit__disabled {
-  cursor: default;
 }
 
 .creature-toolbar--button {
@@ -352,10 +358,6 @@ input[type=number].creature-toolbar--input {
 
 .create-creature-form--item__tall {
   margin-top: -18px;
-}
-
-.create-creature-form--input__error {
-  border: 2px solid red;
 }
 
 .create-creature-form--submit {
